src/test/ui/parser/issue-14303-fn-def.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-fn-def.rs:13:15
   |
LL | fn foo<'a, T, 'b>(x: &'a T) {}
   |               ^^

error: aborting due to previous error

